--- a/app.json
+++ b/app.json
@@ -91,7 +91,7 @@
       },
       "UPSTREAM_REPO": {
         "description": "لا تـغيرها ابـدا",
-        "value": "https://github.com/nornorno/muezk-nour",
+        "value": "https://github.com/KAREFELHAKAM/Music",
         "required": true
       }
     },
