--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ميـوزك العالم",
+    "name": "ميـوزك كارف الحاكم",
     "description": "- لـ تشغيـل الاغانـي والفيديـو والبثـوث المباشـرة فـي المكالمـات الصوتيـه والمرئيـة عـلى تيليجــرام",
-    "logo": "https://te.legra.ph/file/7994175c9bbea45fc7377.jpg",
+    "logo": "https://te.legra.ph/file/610599a976ae27316bfd4.jpg",
     "keywords": [
     "python3",
     "telegram",
